[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Coins.gd" type="Script" id=1]

[node name="Coins" type="Spatial"]
script = ExtResource( 1 )
TIMER_DELAY = 0.5

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 4.0
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
